Fix registration fees table overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   position: relative;
-  min-width: 540px;
   width: auto !important;
   width: 100%;
   height: 100%;
@@ -1969,6 +1968,10 @@ nav #hamburger {
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
+}
+
+.reg-table .table-wrap {
+  overflow-x: auto;
 }
 
 .reg-table table {
